--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div>
                         <div class="text">اسم  العائلة</div>
-                        <div class="last">مار خان</div>
+                        <div class="last"> خان</div>
                     </div>
                     <div>
                     <div class="text">تاريخ إصدار البطاقة</div>
